Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>