Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Automated_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Automated_Behaviour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automation that originated this deployment step.</description>
    <inlineHelpText>Automation that originated this deployment step.</inlineHelpText>
    <label>Automated Behaviour</label>
    <referenceTo>Quality_Gate__c</referenceTo>
    <relationshipLabel>Execution History</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>