Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/CheckOnly__c.field-meta.xml
<CustomField>
    <fullName>CheckOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This only Apply for Metadata Steps. None of the other Steps types are affected by this checkbox. 
WARNING: Credits consumption will apply as a regular deployment since resource-wise is exactly the same as a real deployment.</inlineHelpText>
    <label>CheckOnly</label>
    <type>Checkbox</type>
</CustomField>