Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>Commit_Id__c</fullName>
    <label>Commit Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>