Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Commit_Name__c.field-meta.xml
<CustomField>
    <fullName>Commit_Name__c</fullName>
    <label>Commit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>