Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Count_Completed__c.field-meta.xml
<CustomField>
    <fullName>Count_Completed__c</fullName>
    <label># Completed</label>
    <summaryFilterItems>
        <field>Deployment_Job__c.Status__c</field>
        <operation>equals</operation>
        <value>Success, Failed</value>
    </summaryFilterItems>
    <summaryForeignKey>Deployment_Job__c.Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>