Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/dataJson__c.field-meta.xml
<CustomField>
    <fullName>dataJson__c</fullName>
    <description>If the step type is &quot;data&quot;  this should contains the json defining the query. 
In production this field should be HIDDEN</description>
    <label>dataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>