Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Deployed__c.field-meta.xml
<CustomField>
    <fullName>Deployed__c</fullName>
    <formula>IF(Org_Count__c &gt; 0,
SUM_Deployed__c / Org_Count__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>