Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Git Repository</label>
    <referenceTo>Git_Repository__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>Lookup</type>
</CustomField>