Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/JsonResult__c.field-meta.xml
<CustomField>
    <fullName>JsonResult__c</fullName>
    <description>An Internal field to store step result</description>
    <label>JsonResult</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>