Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Manual_Task_Notified__c.field-meta.xml
<CustomField>
    <fullName>Manual_Task_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To prevent sending multiple notifications to the same Manual Task owner per Task</description>
    <label>Manual Task Notified</label>
    <type>Checkbox</type>
</CustomField>