Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Notify_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Task_Owner__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Notify Task Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notify_Task_Owner_Values</valueSetName>
    </valueSet>
</CustomField>