Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Org_Count__c.field-meta.xml
<CustomField>
    <fullName>Org_Count__c</fullName>
    <label>Credential Count</label>
    <summaryForeignKey>Deployment_Job__c.Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>