Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>