Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Run_all_tests__c.field-meta.xml
<CustomField>
    <fullName>Run_all_tests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run all tests</label>
    <type>Checkbox</type>
</CustomField>