Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE( 
  CASE(  Status__c,  &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
  &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>