Dummy_Package_for_scratch_org/main/default/objects/Step__c/fields/View_Attachment__c.field-meta.xml
<CustomField>
    <fullName>View_Attachment__c</fullName>
    <formula>IF( 
  NOT(ISBLANK(Attachment_Id__c)),
  HYPERLINK(&quot;/&quot;+Attachment_Id__c, &quot;View&quot;, &quot;_blank&quot;),
  &quot;&quot;
)</formula>
    <label>View Attachment</label>
    <type>Text</type>
</CustomField>